pushing up start to login page
NOTE: I have replaced the rootPage temporarily in order to test this page by default. Later we will change that pack top homePage and have that page check if the user is authenticated or not and redirect back to login when needed.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,5 @@
 // http://ionicframework.com/docs/theming/
-
+@import "../assets/scss/animate";
 
 // App Global Sass
 // --------------------------------------------------
