--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,46 @@
 page-home {
+	ion-fab ion-icon {
+		color: #333;
+		font-size: 4rem;
+	}
 
+	.user {
+		background-color: #8E8D94;
+
+		h2, p {
+			color: #FFF;
+		}
+
+		ion-icon {
+			color: #D7D7D7;
+			font-size: 3rem;
+		}
+	}
+
+	.event-info {
+		background-color: #D4E4E6;
+
+		h3, p {
+			color: #333;
+		}
+
+		h3 {
+			font-weight: bold;
+		}
+
+		.date {
+			color: #71A7AD;
+			font-weight: bold;
+		}
+
+		ion-avatar {
+			align-self: end;
+			position: relative;
+			top: 20px;
+		}
+	}
+
+	ion-row {
+		align-items: center;
+	}
 }
