--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -6,7 +6,7 @@
     padding: 18vh 0 4vh 0;
     justify-content: space-between;
 
-    background: url('/assets/imgs/loginBackground.jpg') center; background-size: cover;
+    background: url('../assets/imgs/loginBackground.jpg') center; background-size: cover;
 
     header { height: 60%; }
 
