--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,15 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.item-md {
+    ion-avatar {
+        min-width: 60px;
+        max-width: 60px;
+
+        img {
+            width: 60px;
+            height: 60px;
+        }
+    }
+}
