--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,10 +1,16 @@
 page-home {
-
-	.event-info {
-		h3, p {
-			color: #333;
+	.item-md {
+		h2 {
+			color: map-get($colors, primary);
+			font-weight: bold;
 		}
 
+		p {
+			color: black;
+		}
+	}
+
+	.event-info {
 		h3 {
 			font-weight: bold;
 		}
@@ -13,15 +19,12 @@ page-home {
 			color: map-get($colors, primary);
 			font-weight: bold;
 		}
-
-		ion-avatar {
-			align-self: end;
-			position: relative;
-			top: 20px;
-		}
 	}
 
-	ion-row {
-		align-items: center;
+	.event-info,
+	attendee-list-item {
+		.col[col-2] {
+			text-align: right;
+		}
 	}
 }
