make description toggle - BP

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -14,8 +14,14 @@ page-home {
 			color: black;
 		}
 
-        .description p {
-            margin-bottom: 1em;
+        .description {
+			&.minimized{
+				height: 20px;
+			}
+			p {
+				margin-bottom: 1em;
+			}
+			
         }
 	}
 
